# orca

./: .gitignore  Dockerfile  pyproject.toml
orca/: __main__.py  api.py  k8s.py  models.py  service.py
tests/: test_orca.py
