[tool.poetry]
name = "orca"
version = "0.1.0"
description = ""
authors = ["opeyemi <ofolorunsho@influxdata.com>"]

[tool.poetry.scripts]
fraud = 'orca.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
kubernetes = "^23.6.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyflakes = "^2.4.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
